--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,19 +23,19 @@
 
     <section class="flex-container">
         <div class="half-width">
-            <h1 class="top-header"><span id="top-header-skip">Skip,</span> The Diet, <br>
+            <h1 class="top-header"><span id="top-header-skip">Skip</span> The Diet, <br>
                 Just Eat Healthy<br>
                 With Food Network</h1>
             <p class="top-header-p">Better a broken diet than no diet at all</p>
             <a href="https://www.linkedin.com/in/in-fahim/" target="_blank" class="order-button">Order Now</a>
         </div>
         <div class="half-width">
-            <img src="images/Group 8447.png" alt="">
+            <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
     <section class="about flex-container">
         <div class="half-width">
-            <img src="images/female/Group 8425.png" alt="">
+            <img src="images/female/Person Image.png" alt="" class="about-img">
         </div>
         <div class="half-width about-div">
             <h1 class="about-header">About Me</h1>
@@ -58,7 +61,7 @@
         <div class="half-width recipies">
             <img src="images/food/Project Cover.jpg" alt="">
             <h2>
-                Choolate Spong Cake
+                Chocolate Spong Cake
             </h2>
             <p>
                 Preheat oven to 350 degrees F (175 degrees C). Grease and flour an 8-inch square pan. In a large
