--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Just Eat Healthy<br>
                 With Food Network</h1>
             <p class="top-header-p">Better a broken diet than no diet at all</p>
-            <a href="https://www.linkedin.com/in/in-fahim/" target="_blank" class="order-button">Order Now</a>
+            <a href="https://www.instagram.com/_imfahim/" target="_blank" class="order-button">Order Now</a>
         </div>
         <div class="half-width">
             <img src="images/female/Group 8425.png" alt="">
