--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 
 <body>
 
-    <section class="menu">
-        <div>
-
-        </div>
-
+    <section class="nav-area">
+        <ul class="nav">
+            <li><a href="">HOME</a></li>
+            <li><a href="">ORDER</a></li>
+            <li><a href="">ABOUT</a></li>
+            <li><a href="">CONTACT</a></li>
+            <li><a href="">RECIPIES</a></li>
+            <li><a href="">My Recipies</a></li>
+        </ul>
     </section>
 
     <section class="flex-container">
@@ -56,7 +60,7 @@
         <h1>My Recipies</h1>
         <p>Everybody understands the stuggle of getting dinner on the table after a long <br>
             day. If you're looking for a simple recipe to simplify your weeknight, you've <br>
-            come to the right place--easy dinners are our specialty.</p>
+            come to the right place. Easy dinners are our specialty.</p>
     </section>
     <section class="flex-container">
         <div class="half-width recipies">
