last push of the day

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <li><a href="">ORDER</a></li>
             <li><a href="">ABOUT</a></li>
             <li><a href="">CONTACT</a></li>
-            <li><a href="">RECIPIES</a></li>
+            <li><a href="">RECIPES</a></li>
+            <li><a href="">GALLERY</a></li>
         </ul>
     </section>
 
@@ -56,7 +57,7 @@
         </div>
     </section>
     <section class="my-recipies">
-        <h1>My Recipies</h1>
+        <h1>My Recipes</h1>
         <p>Everybody understands the stuggle of getting dinner on the table after a long <br>
             day. If you're looking for a simple recipe to simplify your weeknight, you've <br>
             come to the right place. Easy dinners are our specialty.</p>
@@ -97,6 +98,31 @@
                 will become dry.
             </p>
         </div>
+    </section>
+    <div class="gallery-header">
+        <h2>Food Gallery</h2>
+    </div>
+    <section class="flex-container gallery-area">
+
+        <div class="half-width gallery">
+            <img src="images/food/Project Cover7.png" alt="">
+        </div>
+        <div class="half-width gallery">
+            <img src="images/food/Project Cover5.png" alt="">
+        </div>
+        <div class="half-width gallery">
+            <img src="images/food/Project Cover8.png" alt="">
+        </div>
+        <div class="half-width gallery">
+            <img src="images/food/Project Cover7.png" alt="">
+        </div>
+        <div class="half-width gallery">
+            <img src="images/food/Project Cover8.png" alt="">
+        </div>
+        <div class="half-width gallery">
+            <img src="images/food/Project Cover5.png" alt="">
+        </div>
+
     </section>
 
     <footer>
